experimental/ir/testdata/fields/invalid_partial.proto.stderr.txt
error: cannot find `M.N` in this scope
  --> testdata/fields/invalid_partial.proto:9:9
   |
 7 |     message N {}
   |             - found possibly related symbol `test.M.N`
 8 |     message M {
 9 |         M.N n = 1;
   |         ^^^ not found in this scope
   |
   = note: Protobuf's name lookup rules expected a symbol `test.M.M.N`, rather
           than the one we found

encountered 1 error
